--- a/package.json
+++ b/package.json
@@ -39,5 +39,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://ashrofdev.github.io/Filestack"
+  "homepage": "https://ashrofdev.github.io/filestack"
 }
